--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Outlook</title>
+  <title>SSW</title>
   <link rel="shortcut icon" type="image/png" href="/outtlook.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
